fix: Make `pre` elements wrap

--- a/static/css/oscardomingo.css
+++ b/static/css/oscardomingo.css
@@ -74,6 +74,10 @@ section {
     text-align: justify;
 }
 
+pre {
+    white-space: pre-wrap;
+}
+
 .info-note,
 .warn-note,
 .danger-note {
